<resources>
    <string name="app_name">Remote</string>
    <string name="tubelight_3">Tubelight 3</string>
    <string name="fan">FAN</string>
    <string name="lights_on">LIGHTS ON</string>
    <string name="sati_start_up_cell_iot_room">SATI Start-Up Cell IoT Room</string>
    <string name="lights_off">LIGHTS OFF</string>
    <string name="todo">TODO</string>
    <string name="on">ON</string>
    <string name="off">OFF</string>
    <string name="tubelight_1">Tubelight 1</string>
    <string name="tubelight_2">Tubelight 2</string>
</resources>